--- a/src/Site/MainBundle/Resources/views/Frontend/Page/index.html.twig
+++ b/src/Site/MainBundle/Resources/views/Frontend/Page/index.html.twig
@@ -30,6 +30,12 @@
                                 <script type="text/javascript" charset="utf-8" src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=7MQDyITlyUKBAz8AQNmKVWZgdmrro0vL&width=100%&height=450"></script>
                             </div>
                         {% endif %}
+                        {% if page.slug == "intierniet-maghazin" %}
+                            <div id="my-store-7336267"></div>
+                            <div>
+                                <script type="text/javascript" src="https://app.ecwid.com/script.js?7336267&data_platform=code&data_date=2015-07-30" charset="utf-8"></script><script type="text/javascript"> xProductBrowser("categoriesPerRow=3","views=grid(3,3) list(10) table(20)","categoryView=grid","searchView=list","id=my-store-7336267");</script>
+                            </div>
+                        {% endif %}
                         {{ page.text|raw }}
                     </div>
                 </div>
