--- a/src/Site/MainBundle/Resources/views/Frontend/layout.html.twig
+++ b/src/Site/MainBundle/Resources/views/Frontend/layout.html.twig
@@ -41,12 +41,12 @@
                             <div class="wrap-head1">
                                 <div class="head1">
                                     <ul>
-                                        <li>группа компаний "сеан"</li>
-                                        <li><span>ооо "сеан-аква"</span></li>
-                                        <li>ооо "wellform"</li>
-                                        <li>"сеан-кр"</li>
-                                        <li>"пск русский дом"</li>
-                                        <li>"проектное бюро"</li>
+                                        <li><a href="http://group-sean.ru/" target="_blank">группа компаний "сеан"</a></li>
+                                        <li><a href="{{ path('frontend_homepage') }}"><span>ооо "сеан-аква"</span></a></li>
+                                        <li><a href="http://www.wellform.ru/" target="_blank">ооо "wellform"</a></li>
+                                        <li><a href="http://kr.group-sean.ru/" target="_blank">"сеан-кр"</a></li>
+                                        <li><a href="http://psk-russkiydom.ru/" target="_blank">"пск русский дом"</a></li>
+                                        <li><a href="http://project.group-sean.ru/" target="_blank">"проектное бюро"</a></li>
                                         <li class="last"></li>
                                     </ul>
                                 </div>
