--- a/src/Site/MainBundle/Resources/views/Frontend/layout.html.twig
+++ b/src/Site/MainBundle/Resources/views/Frontend/layout.html.twig
@@ -89,7 +89,18 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="footer2"></div>
+                            <div class="footer2">
+                                <div class="inner">
+                                    <div class="left">
+                                        Контакты г. Москва, ул. Короленко 2/23,<br/>
+                                        Телефон: (495) 664-30-69, 626-86-43, 626-86-44, e-mail: <a href="mailto:websean@mail.ru">websean@mail.ru</a>
+                                    </div>
+                                    <div class="right">
+                                        ООО "СК-СЕАН-АКВА-ТЕРМ"<br/>
+                                        &copy; 2011 Группа компаний "СЕАН". Все права защищены.
+                                    </div>
+                                </div>
+                            </div>
                         </footer>
                     {% endblock %}
                     <!-- конец Шапка -->
