add fixes menu-left

--- a/src/Site/MainBundle/Resources/views/Frontend/Products/index.html.twig
+++ b/src/Site/MainBundle/Resources/views/Frontend/Products/index.html.twig
@@ -73,7 +73,18 @@
             </div>
             <!-- end Text -->
 
-            <div class="footer"></div>
+            <div class="footer2">
+                <div class="inner">
+                    <div class="left">
+                        Контакты г. Москва, ул. Короленко 2/23,<br/>
+                        Телефон: (495) 664-30-69, 626-86-43, 626-86-44, e-mail: <a href="mailto:websean@mail.ru">websean@mail.ru</a>
+                    </div>
+                    <div class="right">
+                        ООО "СК-СЕАН-АКВА-ТЕРМ"<br/>
+                        &copy; 2011 Группа компаний "СЕАН". Все права защищены.
+                    </div>
+                </div>
+            </div>
         </div>
         <!-- end Content -->
     </div>
