--- a/src/Site/MainBundle/Resources/public/frontend/styles/main.css
+++ b/src/Site/MainBundle/Resources/public/frontend/styles/main.css
@@ -136,8 +136,11 @@ header .head2 div.right div.top button {
   -moz-box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   -webkit-box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  background: #002d66;
-  border: 0px;
+  background: rgba(255, 255, 255, 0.5);
+  border: #fff solid 1px;
+}
+header .head2 div.right div.top button:focus{
+    outline: 0;
 }
 /* line 108, ../sass/main.sass */
 header .head2 div.right div.bottom {
@@ -262,13 +265,13 @@ header .container {
 header .container .menu-left {
   width: 268px;
   position: fixed;
-  padding: 30px;
+  padding: 13px 18px 3px 30px;
   background: #fff;
   -moz-box-shadow: 0 1px 10px rgba(0, 0, 0, 0.18);
   -webkit-box-shadow: 0 1px 10px rgba(0, 0, 0, 0.18);
   box-shadow: 0 1px 10px rgba(0, 0, 0, 0.18);
   margin: 20px auto 0 auto;
-  left: -886px;
+  left: -904px;
   right: 0px;
 }
 @media (max-width: 1200px) {
@@ -287,7 +290,7 @@ header .container .menu-left ul {
 }
 /* line 205, ../sass/main.sass */
 header .container .menu-left li {
-  margin-bottom: 10px;
+  margin-bottom: 11px;
 }
 /* line 207, ../sass/main.sass */
 header .container .menu-left li a {
@@ -325,8 +328,8 @@ header .content, header .content_portfolio {
 }
 /* line 233, ../sass/main.sass */
 header .content .wrap_head, header .content_portfolio .wrap_head {
-  padding-top: 47px;
-  background: #fff;
+  padding-top: 29px;
+  background: #fff; 
 }
 /* line 236, ../sass/main.sass */
 header .content .wrap_head .head, header .content_portfolio .wrap_head .head {
@@ -336,6 +339,11 @@ header .content .wrap_head .head, header .content_portfolio .wrap_head .head {
   text-transform: uppercase;
   margin: 0 auto;
   padding: 0px 47px 0px 254px;
+}
+h1{
+    color: #002d66;
+    font-size: 18px;
+    text-transform: uppercase;
 }
 /* line 243, ../sass/main.sass */
 header .content .wrap_text, header .content .wrap_block_portfolio, header .content_portfolio .wrap_text, header .content_portfolio .wrap_block_portfolio {
@@ -377,7 +385,7 @@ header .content .breadcrumbs ul li a, header .content_portfolio .breadcrumbs ul 
   text-transform: uppercase;
   text-decoration: none;
   color: #000000;
-}
+}portfolio
 /* line 269, ../sass/main.sass */
 header .content .breadcrumbs ul li span, header .content_portfolio .breadcrumbs ul li span {
   text-transform: uppercase;
@@ -671,35 +679,35 @@ footer .wrap-footer1 .footer1 span {
   vertical-align: middle;
 }
 /* line 466, ../sass/main.sass */
-footer .footer2 {
+.footer2 {
   background: #e5e5e5;
   height: 80px;
   line-height: 80px;
 }
-footer .footer2{
+.footer2{
     font-size: 0;
 }
-footer .footer2 .inner{
+.footer2 .inner{
     max-width: 1090px;
     margin: 0 auto;
     padding: 0 20px;
 }
-footer .footer2 a{
+.footer2 a{
     color: #000;
     text-decoration: none;
 }
-footer .footer2 .left,
-footer .footer2 .right{
+.footer2 .left,
+.footer2 .right{
     display: inline-block;
     vertical-align: middle;
     width: 50%;
     font-size: 14px;
     line-height: 18px;
 }
-footer .footer2 .left{
+.footer2 .left{
     text-align: left;
 }
-footer .footer2 .right{
+.footer2 .right{
     text-align: right;
 }
 /* line 471, ../sass/main.sass */
@@ -758,7 +766,7 @@ footer .footer2 .right{
 /* line 511, ../sass/main.sass */
 .st-menu p {
   font-size: 14px;
-  color: #acacac;
+  color: #000;
   margin: 20px 0px;
   padding: 0;
 }
