--- a/src/Site/MainBundle/Resources/public/frontend/styles/main.css
+++ b/src/Site/MainBundle/Resources/public/frontend/styles/main.css
@@ -122,22 +122,22 @@ header .head2 div.right div.top div.last {
 }
 /* line 95, ../sass/main.sass */
 header .head2 div.right div.top .phone, header .head2 div.right div.top .email {
-  color: #000;
+  color: #fff;
   font-size: 16px;
-  /*text-shadow: 1px 1px 1px black;*/
+  text-shadow: 1px 1px 1px black;
 }
 /* line 99, ../sass/main.sass */
 header .head2 div.right div.top button {
   display: inline-block;
   height: 30px;
   padding: 0px 15px;
-  color: #000;
+  color: #fff;
   font-size: 16px;
-  /*-moz-box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);*/
-  /*-webkit-box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);*/
-  /*box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);*/
+  -moz-box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   background: rgba(255, 255, 255, 0.5);
-  border: #000 solid 1px;
+  border: #fff solid 1px;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
   border-radius: 5px;
@@ -165,20 +165,20 @@ header .head2 div.right div.bottom .menu ul li.last {
 }
 /* line 119, ../sass/main.sass */
 header .head2 div.right div.bottom .menu ul li a {
-  color: #000;
+  color: #fff;
   font-size: 18px;
   text-decoration: none;
   padding: 0px;
-  /*text-shadow: 1px 1px 1px black;*/
+  text-shadow: 1px 1px 1px black;
 }
 /* line 125, ../sass/main.sass */
 header .head2 div.right div.bottom .menu ul li a:hover, header .head2 div.right div.bottom .menu ul li a:focus, header .head2 div.right div.bottom .menu ul li a:active {
-  color: #000;
+  color: #fff;
   background: none;
 }
 /* line 129, ../sass/main.sass */
 header .head2 div.right div.bottom .menu ul li.current a {
-  color: #000;
+  color: #fff;
 }
 /* line 132, ../sass/main.sass */
 header .background-video, header .block-portfolio {
