--- a/src/Site/MainBundle/Resources/views/Frontend/Main/index.html.twig
+++ b/src/Site/MainBundle/Resources/views/Frontend/Main/index.html.twig
@@ -38,81 +38,23 @@
             <div class="grid">
                 <div class="wrap-box">
                     <div class="box">
-                        <img class="wow fadeIn hvr-grow" src="{{ asset('bundles/sitemain/frontend/images/icon1.png') }}" alt="" width="127px" height="124px"/>
+                        <img class="wow fadeIn" src="{{ asset('bundles/sitemain/frontend/images/icon1.png') }}" alt="" width="80px" height="83px"/>
                         <div class="name">опыт 15 лет</div>
                     </div>
                 </div><div class="wrap-box">
                     <div class="box">
-                        <img class="wow fadeIn hvr-grow" src="{{ asset('bundles/sitemain/frontend/images/icon2.png') }}" alt="" width="130px" height="124px"/>
+                        <img class="wow fadeIn" src="{{ asset('bundles/sitemain/frontend/images/icon2.png') }}" alt="" width="80px" height="83px"/>
                         <div class="name">клиенты - первые лица страны</div>
                     </div>
                 </div><div class="wrap-box">
                     <div class="box">
-                        <img class="wow fadeIn hvr-grow" src="{{ asset('bundles/sitemain/frontend/images/icon3.png') }}" alt="" width="109px" height="124px"/>
+                        <img class="wow fadeIn" src="{{ asset('bundles/sitemain/frontend/images/icon3.png') }}" alt="" width="73px" height="83px"/>
                         <div class="name">гарантия на все виды работ</div>
                     </div>
                 </div><div class="wrap-box">
                     <div class="box">
-                        <img class="wow fadeIn hvr-grow" src="{{ asset('bundles/sitemain/frontend/images/icon4.png') }}" alt="" width="89px" height="133px"/>
+                        <img class="wow fadeIn" src="{{ asset('bundles/sitemain/frontend/images/icon4.png') }}" alt="" width="54px" height="83px"/>
                         <div class="name last">постэксплуатационное обслуживание</div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="block1">
-            <h2>Почему важно сделать правильный выбор?</h2>
-            <div class="grid">
-                <div class="wrap-box">
-                    <div class="box">
-                        <div class="name">Безопасность</div>
-                        <div class="wrap-img">
-                            <img class="wow fadeIn hvr-grow"  src="{{ asset('bundles/sitemain/frontend/images/icon2-1.png') }}" alt="" width="118px" height="120px"/>
-                        </div>
-                        <div class="description">
-                            Наша продукция соответствует
-                            самым строгим требованиям
-                            безопасности и имеет
-                            все сертификаты.
-                        </div>
-                    </div>
-                </div><div class="wrap-box">
-                    <div class="box">
-                        <div class="name">Долговечность</div>
-                        <div class="wrap-img">
-                            <img class="wow fadeIn hvr-grow"  src="{{ asset('bundles/sitemain/frontend/images/icon2-2.png') }}" alt="" width="149px" height="121px"/>
-                        </div>
-                        <div class="description">
-                            Мы выбираем только
-                            самых надежный поставщиков,
-                            используем качественные
-                            и дорогие материалы.
-                        </div>
-                    </div>
-                </div><div class="wrap-box">
-                    <div class="box">
-                        <div class="name">Изящество</div>
-                        <div class="wrap-img">
-                            <img class="wow fadeIn hvr-grow"  src="{{ asset('bundles/sitemain/frontend/images/icon2-3.png') }}" alt="" width="156px" height="152px"/>
-                        </div>
-                        <div class="description">
-                            Мы можем предложить как самые
-                            современные решения в дизайне,
-                            так и классику, в зависимости
-                            от ваших предпочтений.
-                        </div>
-                    </div>
-                </div><div class="wrap-box">
-                    <div class="box">
-                        <div class="name">Окупаемость</div>
-                        <div class="wrap-img">
-                            <img class="wow fadeIn hvr-grow"  src="{{ asset('bundles/sitemain/frontend/images/icon2-4.png') }}" alt="" width="120px" height="117px"/>
-                        </div>
-                        <div class="description">
-                            Выбирая качество, вы в итоге
-                            сэкономите, потому что наша
-                            продукция прослужит вам
-                            многие годы.
-                        </div>
                     </div>
                 </div>
             </div>
