remove block on main

--- a/src/Site/MainBundle/Resources/public/frontend/styles/main.css
+++ b/src/Site/MainBundle/Resources/public/frontend/styles/main.css
@@ -604,6 +604,7 @@ section .block2 {
   text-align: center;
   padding-bottom: 1px;
   border-top: solid 5px #e5e5e5;
+  margin-top: 20px;
 }
 /* line 362, ../sass/main.sass */
 section .block2 .video {
